@@ -1,3 +1,4 @@
+* Add support for datetime_field to Reference
 * Show non editable widget as insensitive
 * Move info-bar at the bottom
 * Manage readonly on fields translation dialog
